# easino-py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: unit-tests.yaml
easinopy/: __init__.py
easinopy/cli/: _helper.py  easinocli.py
easinopy/cli/commands/: _Command.py  _GetApiVersion.py  _Help.py
easinopy/cli/tests/: test_easinocli.py
easinopy/easino/: easino.py
easinopy/easino/tests/: test_easino.py
