[metadata]
name = easinopy
version = attr: easinopy.easino.easino.__version__
author = Frai13
license = MIT
description = Provides an easy way to use the EasIno protocol using Python
long_description = file: README.md

[options]
packages = find:
include_package_data = True
install_requires =

[options.entry_points]
console_scripts =
    easinopycli = easinopy.cli.easinocli:main

[options.packages.find]
exclude =
    *tests*
